[package]
name = "p2p-protos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
ipnet = "2.11.0"
libp2p = { version = "0.56.0", features = ["identify", "kad", "macros", "noise", "serde", "tokio", "yamux"] }
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
