[package]
name = "p2p-protos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["cargo"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
indexmap = "2.13.0"
ipnet = "2.11.0"
lazy_static = "1.5.0"
libp2p = { version = "0.56.0", features = ["identify", "kad", "macros", "noise", "serde", "tokio", "yamux"] }
rand = "0.9.2"
ratatui = "0.30.0"
signal-hook = "0.4.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
