[package]
name = "p2p-protos"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.6.0", features = ["cargo", "derive"] }
color-eyre = "0.6.5"
console-subscriber = "0.5.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
indexmap = "2.13.0"
ipnet = "2.12.0"
libp2p = { version = "0.56.0", features = ["identify", "kad", "macros", "mdns", "noise", "serde", "tcp", "tokio", "yamux"] }
parking_lot = "0.12.5"
rand = "0.9.2"
ratatui = "0.30.0"
signal-hook = "0.4.3"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
